--- a/css/main.css
+++ b/css/main.css
@@ -82,3 +82,29 @@ body {
   flex: 1;
   padding-left: 20px;
 }
+
+.aside .item {
+  background-color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 50px;
+  box-shadow: 1px 2px 5px 1px rgba(209, 209, 209, 0.2);
+  margin-bottom: 20px;
+}
+
+.aside ol {
+  margin-top: 0;
+}
+
+.aside li {
+  margin-bottom: 10px;
+}
+
+footer {
+  padding: 10px 30px;
+}
+
+footer p {
+  text-align: center;
+}
