--- a/css/content.css
+++ b/css/content.css
@@ -13,8 +13,8 @@ body {
 
 .main-wrapper h1 {
   text-align: center;
+  flex: 1;
 }
-
 .nav-wrapper {
   background-color: black;
   display: flex;
@@ -49,10 +49,11 @@ body {
   display: flex;
   justify-content: space-between;
   background-color: #f8f8f8;
+  flex-wrap: wrap;
 }
 
 .content-wrapper .section {
-  flex: 3;
+  flex: 2;
   padding: 10px;
 }
 
@@ -76,8 +77,8 @@ body {
 }
 
 .blog-content .blog-image {
-  width: 250px;
-  height: 250px;
+  width: 50vw;
+  height: 50vw;
 }
 
 .blog-content .blog-summary {
@@ -132,4 +133,73 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  font-weight: bold;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header a {
+  padding: 0 20px;
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .main-wrapper {
+    width: 100%;
+  }
+  .nav-wrapper {
+    display: none;
+    /* flex-wrap: wrap; */
+  }
+
+  .nav-wrapper.responsive {
+    display: block;
+  }
+
+  .nav-bar li {
+    float: none;
+  }
+
+  .header a {
+    display: block;
+  }
+
+  .blog-item {
+    width: 80vw;
+    flex-direction: column;
+  }
+
+  .blog-item .blog-image {
+    width: 80vw;
+    height: 80vw;
+  }
+
+  .content-wrapper .aside .item {
+    /* padding: 0; */
+    width: 80vw;
+  }
+
+  .content-wrapper {
+    flex-direction: column-reverse;
+  }
+
+  .blog-content {
+    width: 80vw;
+  }
+
+  .blog-content img {
+    width: 100%;
+  }
 }
