--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,15 @@ a:hover {
   }
   .nav-wrapper {
     display: none;
+    /* flex-wrap: wrap; */
+  }
+
+  .nav-wrapper.responsive {
+    display: block;
+  }
+
+  .nav-bar li {
+    float: none;
   }
 
   .header a {
