--- a/css/content.css
+++ b/css/content.css
@@ -155,6 +155,10 @@ a:hover {
   display: none;
 }
 
+.blog-content img {
+  width: 100%;
+}
+
 @media only screen and (max-width: 600px) {
   .main-wrapper {
     width: 100%;
@@ -198,8 +202,43 @@ a:hover {
   .blog-content {
     width: 80vw;
   }
+}
 
-  .blog-content img {
+@media only screen and (max-width: 850px) {
+  .main-wrapper {
     width: 100%;
+  }
+
+  .blog-item {
+    width: 80vw;
+    flex-direction: column;
+  }
+
+  .blog-item .blog-image {
+    width: 80vw;
+    height: 80vw;
+  }
+
+  .content-wrapper .aside .item {
+    width: 80vw;
+  }
+
+  .content-wrapper {
+    flex-direction: column-reverse;
+  }
+
+  .blog-content {
+    margin-right: 0;
+  }
+
+  .content-wrapper .aside .item {
+    width: 89vw;
+    margin-right: 0;
+    align-self: center;
+  }
+
+  .content-wrapper .aside {
+    justify-content: center;
+    display: flex;
   }
 }
